--- a/pallets/asset-handler/Cargo.toml
+++ b/pallets/asset-handler/Cargo.toml
@@ -10,11 +10,11 @@ version = "1.0.0"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
+parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
 
 frame-support = { workspace = true, default-features = false }
-frame-benchmarking = { workspace = true, default-features = false }
+frame-benchmarking = { workspace = true, default-features = false, optional = true }
 frame-system = { workspace = true, default-features = false }
 
 pallet-balances = { workspace = true, default-features = false }
@@ -31,18 +31,23 @@ chainbridge = {path = "../chainbridge", default-features = false}
 [features]
 default = ["std"]
 std = [
-	"codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	"frame-support/std",
+	"frame-benchmarking?/std",
 	"frame-system/std",
-	"sp-runtime/std",
 	"pallet-balances/std",
 	"pallet-sudo/std",
+	"pallet-assets/std",
+	"sp-io/std",
+	"sp-core/std",
+	"sp-std/std",
+	"sp-runtime/std",
 	"chainbridge/std",
-	"pallet-assets/std"
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
+	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
