--- a/pallets/chainbridge/Cargo.toml
+++ b/pallets/chainbridge/Cargo.toml
@@ -11,13 +11,13 @@ publish = false
 repository = "https://github.com/ChainSafe/chainbridge-substrate"
 
 [dependencies]
-log = { workspace = true }
-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
+log = { workspace = true, default-features = false }
+parity-scale-codec = { workspace = true, default-features = false, features = ["max-encoded-len"] }
 frame-support = { workspace = true, default-features = false }
 frame-benchmarking = { workspace = true, default-features = false,  optional = true }
 frame-system = { workspace = true, default-features = false }
 scale-info = { workspace = true, default-features = false, features = ["derive"] }
-sp-core = { workspace = true }
+sp-core = { workspace = true, default-features = false}
 sp-io = { workspace = true, default-features = false }
 sp-std = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
@@ -26,19 +26,25 @@ blake2-rfc = { workspace = true, default-features = false }
 
 [features]
 default = ["std"]
+std = [
+    "log/std",
+    "parity-scale-codec/std",
+    "frame-support/std",
+    "frame-benchmarking?/std",
+    "frame-system/std",
+    "scale-info/std",
+    "sp-core/std",
+    "sp-io/std",
+    "sp-std/std",
+    "sp-runtime/std",
+    "pallet-balances/std",
+    "blake2-rfc/std",
+]
 runtime-benchmarks = [
     "frame-benchmarking/runtime-benchmarks",
     "frame-support/runtime-benchmarks",
     "frame-system/runtime-benchmarks",
+    "sp-runtime/runtime-benchmarks",
     "pallet-balances/runtime-benchmarks"
-]
-std = [
-    "codec/std",
-    "scale-info/std",
-    "sp-std/std",
-    "frame-support/std",
-    "frame-system/std",
-    "frame-benchmarking?/std",
-    "pallet-balances/std",
 ]
 try-runtime = ["frame-support/try-runtime"]
