runtime Cargo.toml features fixes

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -28,7 +28,7 @@ pallet-offences = { default-features = false, workspace = true }
 pallet-session = { default-features = false, workspace = true }
 pallet-staking = { default-features = false, workspace = true }
 pallet-multisig = { default-features = false, workspace = true }
-pallet-staking-reward-curve = { default-features = false, workspace = true }
+pallet-staking-reward-curve = { workspace = true }
 pallet-sudo = { default-features = false, workspace = true }
 pallet-utility = { default-features = false, workspace = true }
 pallet-timestamp = { default-features = false, workspace = true }
@@ -114,11 +114,8 @@ substrate-wasm-builder = { workspace = true }
 default = ["std"]
 std = [
     "parity-scale-codec/std",
+    "scale-info/std",
     "log/std",
-    "frame-executive/std",
-    "frame-support/std",
-    "frame-system/std",
-    "frame-system-rpc-runtime-api/std",
     "pallet-authorship/std",
     "pallet-babe/std",
     "pallet-balances/std",
@@ -127,55 +124,63 @@ std = [
     "pallet-offences/std",
     "pallet-session/std",
     "pallet-staking/std",
-    "pallet-preimage/std",
-    "pallet-bags-list/std",
-    "pallet-authority-discovery/std",
     "pallet-multisig/std",
     "pallet-sudo/std",
-    "pallet-indices/std",
-    "pallet-child-bounties/std",
-    "pallet-identity/std",
-    "pallet-proxy/std",
-    "pallet-recovery/std",
-    "pallet-democracy/std",
     "pallet-utility/std",
-    "pallet-bounties/std",
-    "pallet-tips/std",
     "pallet-timestamp/std",
     "pallet-transaction-payment/std",
     "pallet-transaction-payment-rpc-runtime-api/std",
     "pallet-treasury/std",
     "pallet-collective/std",
+    "pallet-democracy/std",
     "pallet-elections-phragmen/std",
-    "frame-election-provider-support/std",
     "pallet-membership/std",
     "pallet-scheduler/std",
+    "pallet-bounties/std",
+    "pallet-preimage/std",
+    "pallet-bags-list/std",
+    "pallet-indices/std",
+    "pallet-identity/std",
+    "pallet-proxy/std",
+    "pallet-tips/std",
+    "pallet-recovery/std",
     "pallet-election-provider-multi-phase/std",
+    "pallet-authority-discovery/std",
+    "pallet-child-bounties/std",
+    "frame-support/std",
+    "frame-system/std",
+    "frame-executive/std",
     "sp-api/std",
+    "sp-offchain/std",
+    "sp-runtime/std",
+    "sp-session/std",
+    "sp-std/std",
+    "sp-transaction-pool/std",
+    "sp-version/std",
+    "sp-io/std",
+    "sp-finality-grandpa/std",
+    "sp-authority-discovery/std",
     "sp-block-builder/std",
     "sp-consensus-babe/std",
     "sp-core/std",
     "sp-inherents/std",
-    "sp-offchain/std",
-    "sp-runtime/std",
-    "sp-session/std",
     "sp-staking/std",
-    "sp-std/std",
-    "sp-transaction-pool/std",
-    "sp-version/std",
     "sp-npos-elections/std",
-    "sp-finality-grandpa/std",
+    "frame-election-provider-support/std",
+    "pallet-randomness-collective-flip/std",
     "pallet-assets/std",
+    "frame-system-rpc-runtime-api/std",
     "frame-benchmarking?/std",
     "frame-system-benchmarking?/std",
-
+    "pallet-society/std",
     "orml-vesting/std",
     "polkadex-primitives/std",
     "pdex-migration/std",
-    "frame-try-runtime/std",
-    "pallet-ocex-lmp/std",
     "asset-handler/std",
-    "chainbridge/std"
+    "chainbridge/std",
+    "pallet-ocex-lmp/std",
+    "frame-try-runtime/std",
+    "pallet-asset-handler-runtime-api/std"
 ]
 runtime-benchmarks = [
     #theirs
